[gd_scene load_steps=12 format=3 uid="uid://de421dxllg256"]

[ext_resource type="Script" path="res://scenes/optimization/scripts/hat_production.gd" id="1_es8tx"]
[ext_resource type="Texture2D" uid="uid://b31u837yfvlea" path="res://assets/optimization/background_white.png" id="1_n87me"]
[ext_resource type="Texture2D" uid="uid://des43a6owud3" path="res://assets/optimization/background_hat_building.jpeg" id="2_qcqo5"]
[ext_resource type="Texture2D" uid="uid://bhkvcx68nn8t2" path="res://assets/optimization/crafting_area.jpeg" id="3_5rb0b"]
[ext_resource type="Texture2D" uid="uid://diqdfir6u5wcs" path="res://assets/optimization/card_slot_empty.png" id="4_0iuka"]
[ext_resource type="Texture2D" uid="uid://drqqinsa1dnhv" path="res://assets/optimization/workbg.png" id="5_3kcf4"]
[ext_resource type="Texture2D" uid="uid://b6jhsfi02npyy" path="res://assets/hats/hat_06.png" id="5_8wgs2"]
[ext_resource type="Texture2D" uid="uid://bbix4cpisg8rn" path="res://assets/optimization/hat_color/color_0.png" id="7_scfqa"]
[ext_resource type="AudioStream" uid="uid://bmh5ruunk51j7" path="res://assets/BGM/craft Patreon Goal Reward Loops - Track 02.wav" id="8_qsxg7"]

[sub_resource type="GDScript" id="GDScript_sh8du"]
script/source = "extends Node2D

var type_counter = 0

 #counter for the currently selected type
var hat_path = \"res://assets/hats/hat_\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
	



func _on_type_go_right_pressed():
	
	
	type_counter+=1
	
	#hat_path += str(type_counter) + \"6\" + \".jpeg\"
	$hat_type_1.texture = load(hat_path+str(type_counter) + \"6\" + \".jpeg\")
	
	
	
	##button displays the next type to the right
#
#	#hide currently displayed type
#	if type_counter == 1: 
#		$hat_type_1.hide()
#		type_counter += 1
#	elif type_counter == 2:
#		$hat_type_2.hide()
#		type_counter += 1
#	elif type_counter == 3:
#		$hat_type_3.hide()
#		type_counter += 1
#	elif type_counter == 4:
#		$hat_type_4.hide()
#		type_counter += 1
#	elif type_counter == 5:
#		$hat_type_5.hide()
#		type_counter += 1
#	elif type_counter == 6:
#		$hat_type_6.hide()
#		type_counter += 1
#	elif type_counter == 7:
#		$hat_type_7.hide()
#		type_counter += 1
#	elif type_counter == 8:
#		$hat_type_8.hide()
#		type_counter = 1
#
#	#show next type
#	if type_counter == 1:  
#		$hat_type_1.show()
#	elif type_counter == 2:
#		$hat_type_2.show()
#	elif type_counter == 3:
#		$hat_type_3.show()
#	elif type_counter == 4:
#		$hat_type_4.show()
#	elif type_counter == 5:
#		$hat_type_5.show()
#	elif type_counter == 6:
#		$hat_type_6.show()
#	elif type_counter == 7:
#		$hat_type_7.show()
#	elif type_counter == 8:
#		$hat_type_8.show()


func _on_type_go_left_pressed():
	
	##button displays the next type to the right
	type_counter-=1
	
	#hat_path += str(type_counter) + \"6\" + \".jpeg\"
	$hat_type_1.texture = load(hat_path+str(type_counter) + \"6\" + \".jpeg\")
	
	
	#hide currently displayed type
#	if type_counter == 1:
#		$hat_type_1.hide()
#		type_counter = 8
#	elif type_counter == 2:
#		$hat_type_2.hide()
#		type_counter -= 1
#	elif type_counter == 3:
#		$hat_type_3.hide()
#		type_counter -= 1
#	elif type_counter == 4:
#		$hat_type_4.hide()
#		type_counter -= 1
#	elif type_counter == 5:
#		$hat_type_5.hide()
#		type_counter -= 1
#	elif type_counter == 6:
#		$hat_type_6.hide()
#		type_counter -= 1
#	elif type_counter == 7:
#		$hat_type_7.hide()
#		type_counter -= 1
#	elif type_counter == 8:
#		$hat_type_8.hide()
#		type_counter -= 1
#
#	#show next type
#	if type_counter == 1:
#		$hat_type_1.show()
#	elif type_counter == 2:
#		$hat_type_2.show()
#	elif type_counter == 3:
#		$hat_type_3.show()
#	elif type_counter == 4:
#		$hat_type_4.show()
#	elif type_counter == 5:
#		$hat_type_5.show()
#	elif type_counter == 6:
#		$hat_type_6.show()
#	elif type_counter == 7:
#		$hat_type_7.show()
#	elif type_counter == 8:
#		$hat_type_8.show()
"

[sub_resource type="GDScript" id="GDScript_hj2yo"]
script/source = "extends Node2D

var color_counter = 1 #counter for the currently selected color


# Called when the node enters the scene tree for the first time.
func _ready():
	
	
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_color_go_right_pressed(): 
	##button displays the next color to the right
	
	#hide currently displayed color
	if color_counter == 1:
		$hat_color_1.hide()
		color_counter += 1
	elif color_counter == 2:
		$hat_color_2.hide()
		color_counter += 1
	elif color_counter == 3:
		$hat_color_3.hide()
		color_counter += 1
	elif color_counter == 4:
		$hat_color_4.hide()
		color_counter += 1
	elif color_counter == 5:
		$hat_color_5.hide()
		color_counter += 1
	elif color_counter == 6:
		$hat_color_6.hide()
		color_counter += 1
	elif color_counter == 7:
		$hat_color_7.hide()
		color_counter += 1
	elif color_counter == 8:
		$hat_color_8.hide()
		color_counter = 1
	
	
	#show next color
	if color_counter == 1: 
		$hat_color_1.show()
	elif color_counter == 2:
		$hat_color_2.show()
	elif color_counter == 3:
		$hat_color_3.show()
	elif color_counter == 4:
		$hat_color_4.show()
	elif color_counter == 5:
		$hat_color_5.show()
	elif color_counter == 6:
		$hat_color_6.show()
	elif color_counter == 7:
		$hat_color_7.show()
	elif color_counter == 8:
		$hat_color_8.show()

func _on_color_go_left_pressed():
	##button displays the next color to the left
	
	#hide currently displayed color
	if color_counter == 1:
		$hat_color_1.hide()
		color_counter = 8
	elif color_counter == 2:
		$hat_color_2.hide()
		color_counter -= 1
	elif color_counter == 3:
		$hat_color_3.hide()
		color_counter -= 1
	elif color_counter == 4:
		$hat_color_4.hide()
		color_counter -= 1
	elif color_counter == 5:
		$hat_color_5.hide()
		color_counter -= 1
	elif color_counter == 6:
		$hat_color_6.hide()
		color_counter -= 1
	elif color_counter == 7:
		$hat_color_7.hide()
		color_counter -= 1
	elif color_counter == 8:
		$hat_color_8.hide()
		color_counter -= 1
	
	#show next color
	if color_counter == 1:
		$hat_color_1.show()
	elif color_counter == 2:
		$hat_color_2.show()
	elif color_counter == 3:
		$hat_color_3.show()
	elif color_counter == 4:
		$hat_color_4.show()
	elif color_counter == 5:
		$hat_color_5.show()
	elif color_counter == 6:
		$hat_color_6.show()
	elif color_counter == 7:
		$hat_color_7.show()
	elif color_counter == 8:
		$hat_color_8.show()
"

[node name="hat_production" type="Node2D"]
script = ExtResource("1_es8tx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -1)

[node name="background_white" type="Sprite2D" parent="."]
texture = ExtResource("1_n87me")

[node name="background_crafting" type="Sprite2D" parent="."]
visible = false
position = Vector2(-449, 0.499964)
scale = Vector2(1, 1.05566)
texture = ExtResource("3_5rb0b")

[node name="background_hat_factory" type="Sprite2D" parent="."]
position = Vector2(703, -268)
scale = Vector2(0.5, 0.53)
texture = ExtResource("2_qcqo5")

[node name="Workbg" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("5_3kcf4")

[node name="hat_type_picker" type="Node2D" parent="."]
script = SubResource("GDScript_sh8du")

[node name="hat_type_1" type="Sprite2D" parent="hat_type_picker"]
position = Vector2(-539, -369)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_8wgs2")

[node name="hat_type" type="Sprite2D" parent="hat_type_picker"]
position = Vector2(-539, -369)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0iuka")

[node name="type_go_right" type="Button" parent="hat_type_picker"]
offset_left = -428.0
offset_top = -394.0
offset_right = -379.0
offset_bottom = -330.0
text = ">"

[node name="type_go_left" type="Button" parent="hat_type_picker"]
offset_left = -702.0
offset_top = -396.0
offset_right = -653.0
offset_bottom = -332.0
text = "<"

[node name="hat_color_picker" type="Node2D" parent="."]
script = SubResource("GDScript_hj2yo")

[node name="hat_color_1" type="Sprite2D" parent="hat_color_picker"]
position = Vector2(-538, -148)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_scfqa")

[node name="hat_color" type="Sprite2D" parent="hat_color_picker"]
position = Vector2(-538, -148)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0iuka")

[node name="color_go_right" type="Button" parent="hat_color_picker"]
offset_left = -430.0
offset_top = -169.0
offset_right = -381.0
offset_bottom = -105.0
text = ">"

[node name="color_go_left" type="Button" parent="hat_color_picker"]
offset_left = -697.0
offset_top = -168.0
offset_right = -648.0
offset_bottom = -104.0
text = "<"

[node name="new_hat" type="Node2D" parent="."]

[node name="new_hat_1" type="Sprite2D" parent="new_hat"]
position = Vector2(-538, 133)
scale = Vector2(0.5, 0.5)

[node name="new_hat" type="Sprite2D" parent="new_hat"]
position = Vector2(-538, 133)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0iuka")

[node name="create_new_hat" type="Button" parent="new_hat"]
offset_left = -637.0
offset_top = -21.0
offset_right = -438.0
offset_bottom = 10.0
text = "create"

[node name="hat_storage" type="Node2D" parent="."]

[node name="storage_space_1_sprite" type="Sprite2D" parent="hat_storage"]
position = Vector2(143, 131)
scale = Vector2(0.5, 0.5)

[node name="storage_space_2_sprite" type="Sprite2D" parent="hat_storage"]
position = Vector2(479, 135)
scale = Vector2(0.5, 0.5)

[node name="storage_space_3_sprite" type="Sprite2D" parent="hat_storage"]
position = Vector2(801, 142)
scale = Vector2(0.5, 0.5)

[node name="storage_space_1" type="Sprite2D" parent="hat_storage"]
position = Vector2(143, 131)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0iuka")

[node name="storage_space_2" type="Sprite2D" parent="hat_storage"]
position = Vector2(479, 135)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0iuka")

[node name="storage_space_3" type="Sprite2D" parent="hat_storage"]
position = Vector2(801, 141)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0iuka")

[node name="store_1" type="Button" parent="hat_storage"]
offset_left = 40.0
offset_top = 257.0
offset_right = 245.0
offset_bottom = 288.0
text = "store here"

[node name="store_2" type="Button" parent="hat_storage"]
offset_left = 376.0
offset_top = 257.0
offset_right = 581.0
offset_bottom = 288.0
text = "store here"

[node name="store_3" type="Button" parent="hat_storage"]
offset_left = 697.0
offset_top = 257.0
offset_right = 902.0
offset_bottom = 288.0
text = "store here"

[node name="back_to_optimization" type="Button" parent="."]
offset_left = 664.0
offset_top = 429.0
offset_right = 932.0
offset_bottom = 500.0
text = "Next"

[node name="AcceptDialog_no_hat_in_inv" type="AcceptDialog" parent="."]
initial_position = 1
size = Vector2i(384, 100)
dialog_text = "you must add at least one hat to your inventory"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qsxg7")
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="hat_type_picker/type_go_right" to="." method="_on_type_go_right_pressed"]
[connection signal="pressed" from="hat_type_picker/type_go_left" to="." method="_on_type_go_left_pressed"]
[connection signal="pressed" from="hat_color_picker/color_go_right" to="." method="_on_color_go_right_pressed"]
[connection signal="pressed" from="hat_color_picker/color_go_left" to="." method="_on_color_go_left_pressed"]
[connection signal="pressed" from="new_hat/create_new_hat" to="." method="_on_create_new_hat_pressed"]
[connection signal="pressed" from="hat_storage/store_1" to="." method="_on_store_1_pressed"]
[connection signal="pressed" from="hat_storage/store_2" to="." method="_on_store_2_pressed"]
[connection signal="pressed" from="hat_storage/store_3" to="." method="_on_store_3_pressed"]
[connection signal="pressed" from="back_to_optimization" to="." method="_on_next_pressed"]
